# bevy-jam-1

./: Cargo.toml  README.md
docs/game/: index.html
src/: bundle.rs  component.rs  main.rs  particles.rs  resource.rs  shapes.rs
src/system/: ai.rs  collision.rs  input.rs  mod.rs  movement.rs  particle.rs  pause.rs  score.rs  startup.rs  ui.rs
src/system/punch/: mod.rs  punch_action.rs  punch_animation.rs  punch_increase.rs  start_punch.rs
